--- a/example-simple/example-simple.xcodeproj/xcshareddata/xcschemes/example-simple Debug.xcscheme
+++ b/example-simple/example-simple.xcodeproj/xcshareddata/xcschemes/example-simple Debug.xcscheme
@@ -14,9 +14,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "example.app"
-               BlueprintName = "example"
-               ReferencedContainer = "container:example.xcodeproj">
+               BuildableName = "example-simple.app"
+               BlueprintName = "example-simple"
+               ReferencedContainer = "container:example-simple.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,9 +32,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "example.app"
-            BlueprintName = "example"
-            ReferencedContainer = "container:example.xcodeproj">
+            BuildableName = "example-simple.app"
+            BlueprintName = "example-simple"
+            ReferencedContainer = "container:example-simple.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -50,9 +50,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "example.app"
-            BlueprintName = "example"
-            ReferencedContainer = "container:example.xcodeproj">
+            BuildableName = "example-simple.app"
+            BlueprintName = "example-simple"
+            ReferencedContainer = "container:example-simple.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -68,9 +68,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "example.app"
-            BlueprintName = "example"
-            ReferencedContainer = "container:example.xcodeproj">
+            BuildableName = "example-simple.app"
+            BlueprintName = "example-simple"
+            ReferencedContainer = "container:example-simple.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
